--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,16 @@ java {
 	}
 }
 
+bootJar {
+	exclude("application-dev.yml", "application-prod.yml", "log4j2.xml")
+	duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+	launchScript()
+}
+
+jar {
+	enabled = false
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -39,6 +49,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+	// log4j
+	implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.20.0'
+
 	// Database MySQL Connector
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
@@ -52,6 +65,17 @@ kotlin {
 	compilerOptions {
 		freeCompilerArgs.addAll '-Xjsr305=strict'
 	}
+}
+
+tasks.register('copyAppYml', Copy) {
+	from './src/main/resources/application-prod.yml'
+	from './src/main/resources/log4j2.xml'
+	into "./build/libs/config"
+	rename "-prod", ""
+}
+
+tasks.named('build') {
+	dependsOn tasks.named('copyAppYml')
 }
 
 allOpen {
