--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,9 @@ dependencies {
 	// Database MySQL Connector
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
+	// Swagger
+	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13"
+
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
